<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchWords_fatherLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffefd5"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dictionary13.cn.eoe.app.ui.TranslateActivity">


    <LinearLayout
        android:id="@+id/searchWords_linerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageButton
                android:id="@+id/bt_collect"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/collect"
                android:background="@drawable/change_color"
                android:layout_marginRight="14dp"
                android:layout_marginEnd="14dp"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/searchWords_key"
                android:layout_alignParentRight="true"
                 />


            <TextView
                android:id="@+id/searchWords_key"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:text="abc"
                android:textSize="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="32dp">

    <LinearLayout
        android:id="@+id/searchWords_posE_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp">

        <ImageButton
            android:id="@+id/searchWords_voiceE"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:src="@drawable/voice" />

        <TextView
            android:id="@+id/searchWords_psE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="7dp"
            android:text="@string/psE"
            android:textColor="#3B3C3D"
            android:textSize="20dp"
            android:layout_alignParentBottom="true" />

        <LinearLayout
            android:id="@+id/searchWords_posA_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="18dp">

            <ImageButton
                android:id="@+id/searchWords_voiceA"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@android:color/transparent"
                android:src="@drawable/voice" />

            <TextView
                android:id="@+id/searchWords_psA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="7dp"
                android:text="@string/psA"
                android:textColor="#3B3C3D"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentBottom="true"
        android:background="#D0D0D0"
        android:layout_width="fill_parent"
        android:layout_height="1dp"/>




</RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/posAcceptation"
                    android:textSize="20dp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <TextView
                android:id="@+id/searchWords_posAcceptation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layer_list_view"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/pos"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/sent"
                    android:textSize="20dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/layer_list_view">

            <TextView
                android:id="@+id/searchWords_sent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/pos"
                android:textSize="15dp" />
        </ScrollView>           <!---ScrollView,竖直滑动，保证能显示完整的例句内容-->
    </LinearLayout>

</LinearLayout>
